--- a/BoggleSolver/BoggleSolver.csproj
+++ b/BoggleSolver/BoggleSolver.csproj
@@ -5,7 +5,12 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="BenchmarkDotNet" Version="0.14.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <None Update="dictionary.txt">
